objects/ssot__AdverseEventSupportInfo__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Supporting Info Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportingInformationCodeId__c</fullName>
        <label>Supporting Information Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportingInformationCodeObject__c</fullName>
        <label>Supporting Information Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportingInformationId__c</fullName>
        <label>Supporting Information</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportingInformationObject__c</fullName>
        <label>Supporting Information Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721826484_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventSupportInfo_SupportingIn_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>AdverseEventSupportInfo_SupportingIn_rel</relationshipLabel>
        <relationshipName>rel_1716721826484_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721828358_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventSupportInfo_SupportingIn_rel</label>
        <referenceTo>ssot__AllergyIntolerance__dlm</referenceTo>
        <relationshipLabel>AdverseEventSupportInfo_SupportingIn_rel</relationshipLabel>
        <relationshipName>rel_1716721828358_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721834061_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventSupportInfo_SupportingIn_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>AdverseEventSupportInfo_SupportingIn_rel</relationshipLabel>
        <relationshipName>rel_1716721834061_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>